[project]
name = "incidentiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.19.1",
    "fastapi>=0.137.0",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "uvicorn>=0.49.0",
]
